package interfaceSegregation.v2ObeyISP.interfaceObeyISP;


public interface InterfaceB {
    void op2();
    void op3();
}
