package interfaceSegregation.v2ObeyISP.interfaceObeyISP;

public interface InterfaceBD {
    void op1();
}
