package interfaceSegregation.v2ObeyISP.interfaceObeyISP;


public interface InterfaceD {
    public void op4();
    public void op5();
}
